--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,14 @@
 {%  extends 'base.html' %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
-<h3>{{ title }}</h3>
-{{ form.email }}<br><br>
-{{ form.password }}<br>
-{{ form.remember_me}}<br>
-{{ form.submit }}
+<form method="POST" class="bg-light p-4 rounded shadow" style="margin-left: auto; margin-right: auto; max-width:500px; margin-top:25px;"">
+    <h3>{{ title }}</h3>
+    {{ form.email.label }}<br>
+    {{ form.email(class="form-control", placeholder="Enter your email:", value="example@example.com") }}
+    {{ form.password.label }}<br>
+    {{ form.password(class="form-control", placeholder="Enter your password:", value="qwerty") }}
+    {{ form.remember_me(class="form-check-input", style="margin-top: 17px; margin-bottom: 17px;") }}
+    {{ form.remember_me.label(class="form-check-label", style="margin-top: 14px; margin-bottom: 14px;") }}<br>
+    {{ form.submit(class="btn btn-success") }}
+</form>
 {% endblock %}
