--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,8 @@
             <div class="col-md-3 text-end">
                 <button type="button" class="btn btn-outline-primary me-2"><a href="/login"
                         class="nav-link px-2">Login</a></button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
+                <button type="button" class="btn btn-primary"><a href="/register"
+                    class="nav-link px-2">Sign-up</a></button>
             </div>
         </header>
         {% block content %}{% endblock %}
