добавил регистрацию api ключа для добавления пользователей через запрос

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
                 <li><a href="#" class="nav-link px-2">О нас</a></li>
                 <li><a href="/addjob" class="nav-link px-2">Добавить работу</a></li>
-                <li><a href="#" class="nav-link px-2">Рабаты</a></li>
+                <li><a href="/create_api_key" class="nav-link px-2">Получить API ключ</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
