--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,9 @@
 
 <body>
     <div class="container">
-        <h1>Миссия Колонизация Марса</h1>
-    </div>
-    <div class="container">
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-            
-            <h4> И на Марсе будут яблони цвести!</h4>
+            <span>Миссия Колонизация Марса</span>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
                 <li><a href="#" class="nav-link px-2">О нас</a></li>
