--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <span>Миссия Колонизация Марса</span>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
-                <li><a href="#" class="nav-link px-2">О нас</a></li>
+                <li><a href="/jobs_vision" class="nav-link px-2">Работы</a></li>
                 <li><a href="/addjob" class="nav-link px-2">Добавить работу</a></li>
                 <li><a href="/create_api_key" class="nav-link px-2">Получить API ключ</a></li>
             </ul>
