--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,3 +3,11 @@ header {
     padding: 15px;
     margin-top: 15px;
 }
+
+.logo {
+    width: 34px;
+    height: 34px;
+    margin-top: -15px;
+    margin-right: 15px;
+    float: left
+}
