--- a/templates/base.html
+++ b/templates/base.html
@@ -14,26 +14,30 @@
     <div class="container">
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-            <span>Миссия Колонизация Марса</span>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
-                <li><a href="/jobs_vision" class="nav-link px-2">Работы</a></li>
-                <li><a href="/addjob" class="nav-link px-2">Добавить работу</a></li>
-                <li><a href="/create_api_key" class="nav-link px-2">Получить API ключ</a></li>
-            </ul>
+            <div class="container">
+                <header
+                    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+                    <img src="{{ url_for('static', filename='img/logo.svg') }}" alt="Logo" class="logo" title="liridius">
+                    <span>Liridius Proj</span>
+                    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
+                        <li><a href="/jobs_vision" class="nav-link px-2">Работы</a></li>
+                        <li><a href="/addjob" class="nav-link px-2">Добавить работу</a></li>
+                        <li><a href="/create_api_key" class="nav-link px-2">Получить API ключ</a></li>
+                    </ul>
 
-            <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-outline-primary me-2"><a href="/login"
-                        class="nav-link px-2">Login</a></button>
-                <button type="button" class="btn btn-primary"><a href="/register"
-                    class="nav-link px-2">Sign-up</a></button>
+                    <div class="col-md-3 text-end">
+                        <button type="button" class="btn btn-outline-primary me-2"><a href="/login"
+                                class="nav-link px-2">Login</a></button>
+                        <button type="button" class="btn btn-primary"><a href="/register"
+                                class="nav-link px-2">Sign-up</a></button>
+                    </div>
+                </header>
+                {% block content %}{% endblock %}
             </div>
-        </header>
-        {% block content %}{% endblock %}
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
