добавил личный кабинет

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
                     </ul>
 
                     <div class="col-md-3 text-end">
+                        <button type="button" class="btn btn-outline-primary me-2"><a href="/profile"
+                            class="nav-link px-2">Profile</a></button>
                         <button type="button" class="btn btn-outline-primary me-2"><a href="/login"
                                 class="nav-link px-2">Login</a></button>
                         <button type="button" class="btn btn-primary"><a href="/register"
