--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
                     <div class="col-6 col-md-3 mb-3">
                         <h5>Контакты</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                            <li class="nav-item mb-2"><a href="https://t.me/liridius_proj_bot" class="nav-link p-0 text-muted" target="_blank"><i
                                         class="fab fa-telegram me-2"></i>Telegram</a></li>
                             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
                                         class="fab fa-github me-2"></i>GitHub</a></li>
