--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Главная{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -133,7 +133,7 @@
                         <ul class="nav flex-column">
                             <li class="nav-item mb-2"><a href="https://t.me/liridius_proj_bot" class="nav-link p-0 text-muted" target="_blank"><i
                                         class="fab fa-telegram me-2"></i>Telegram</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                            <li class="nav-item mb-2"><a href="https://github.com/ZEFERUS777/yandex-task-web" target="_blank" class="nav-link p-0 text-muted"><i
                                         class="fab fa-github me-2"></i>GitHub</a></li>
                             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
                                         class="fas fa-envelope me-2"></i>Email</a></li>
