добавил отображенре и добавление лидеров

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,9 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
                 <li><a href="/jobs_vision" class="nav-link px-2">Работы</a></li>
+                <li><a href="/team_leads" class="nav-link px-2">Лидеры</a></li>
                 <li><a href="/addjob" class="nav-link px-2">Добавить работу</a></li>
+                <li><a href="/add_lead" class="nav-link px-2">Добавить лидера</a></li>
                 <li><a href="/create_api_key" class="nav-link px-2">API</a></li>
             </ul>
 
